--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,5 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:design:28.0.0'
     implementation "com.android.support:support-v4:28.0.0"
-    implementation project(path: ':library')
+    implementation 'com.github.AndreaCioccarelli:BillingProtector:-SNAPSHOT'
 }
