--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.andreacioccarelli.billingprotectorsample"
         minSdkVersion 14
         targetSdkVersion 28
-        versionCode 8
-        versionName "1.3.1"
+        versionCode 9
+        versionName "1.3.2"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -27,5 +27,5 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:design:28.0.0'
     implementation "com.android.support:support-v4:28.0.0"
-    implementation 'com.github.AndreaCioccarelli:BillingProtector:-SNAPSHOT'
+    implementation project(path: ':library')
 }
