--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 *.apk
 *.ap_
 
+# Mac Files
+*.DS_Store
+
 # Files for the ART/Dalvik VM
 *.dex
 
@@ -16,7 +19,6 @@ out/
 # Gradle files
 .gradle/
 build/
-app/build
 
 # Local configuration file (sdk path, etc)
 local.properties
@@ -64,3 +66,11 @@ fastlane/Preview.html
 fastlane/screenshots
 fastlane/test_output
 fastlane/readme.md
+
+# Extra
+.gradle
+.idea
+build
+.git
+local.properties
+app/release/output.json
